<resources>
    <string name="app_name">SmiteSpec</string>

    <string name="home_menu">Player Home</string>
    <string name="search_player">Search Player</string>
    <string name="clear_search">Clear Search</string>
    <string name="search_hint">Search Player</string>
    <string name="search_prompt">Welcome to Smite Spec!\nBegin by searching a player.</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="player_name">Example</string>
    <string name="player_stats_title">Player\'s Stats by Game Mode:</string>
    <string name="friends_list">Friends</string>
    <string name="clan_stats">Clan Stats</string>
    <string name="title_activity_player_stats">PlayerStatsActivity</string>

    <string name="game_mode">Game Mode</string>
    <string name="overall_wl">Overall Win/Loss:</string>
    <string name="overall_kd">Overall Kill/Death:</string>
    <string name="overall_wl_value">0</string>
    <string name="overall_kd_value">0</string>
    <string name="fav_god_label">Most Played:</string>
    <string name="wl_god_label">Most Wins:</string>
    <string name="kd_god_label">Best K/D:</string>
    <string name="fav_god_value">0</string>
    <string name="wl_god_value">0</string>
    <string name="kd_god_value">0</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="single_kd_label">K/D:</string>
    <string name="single_wl_label">Wins:</string>
    <string name="single_assists_label">Assists:</string>
    <string name="single_matches_label">Matches:</string>
    <string name="single_kd_value">0/0</string>
    <string name="single_wl_value">0.0</string>
    <string name="single_assists_value">0</string>
    <string name="single_matches_value">0</string>

    <string name="status_on">In Game</string>
    <string name="status_off">Offline</string>
    <string name="status_lobby">Main Menu</string>
    <string name="title_activity_clan">ClanActivity</string>

    <string name="clan_name">Clan Name</string>
    <string name="clan_tag">[TAG]</string>
    <string name="clan_wins_label">Wins:</string>
    <string name="clan_wins_value">X</string>
    <string name="clan_loss_label">Losses:</string>
    <string name="clan_loss_value">X</string>
    <string name="clan_founder_label">Founded By:</string>
    <string name="clan_founder_value">Founder Name</string>
    <string name="clan_num_members_label">Clan Size:</string>
    <string name="clan_num_members_value">0</string>
    <string name="clan_rating_label">Clan Rating:</string>
    <string name="clan_rating_value">0</string>
    <string name="clan_members">Members:</string>
</resources>
