<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.umkc.dfsy8cmail.smitespec.ClanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clan_name"
        android:id="@+id/clan_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clan_tag"
        android:id="@+id/clan_tag"
        android:layout_alignTop="@+id/clan_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_wins_label"
        android:id="@+id/clan_wins_label"
        android:layout_below="@+id/clan_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_wins_value"
        android:id="@+id/clan_wins_value"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignTop="@+id/clan_wins_label"
        android:layout_toRightOf="@+id/clan_wins_label"
        android:layout_toEndOf="@+id/clan_wins_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_loss_label"
        android:id="@+id/clan_loss_label"
        android:layout_alignTop="@+id/clan_wins_value"
        android:layout_alignRight="@+id/clan_founder_value"
        android:layout_alignEnd="@+id/clan_founder_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_loss_value"
        android:id="@+id/clan_loss_value"
        android:layout_alignTop="@+id/clan_loss_label"
        android:layout_toRightOf="@+id/clan_loss_label"
        android:layout_toEndOf="@+id/clan_loss_label"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_founder_label"
        android:id="@+id/clan_founder_label"
        android:layout_alignTop="@+id/clan_founder_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_founder_value"
        android:id="@+id/clan_founder_value"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/clan_loss_label"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_num_members_label"
        android:id="@+id/clan_num_members_label"
        android:layout_below="@+id/clan_founder_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_num_members_value"
        android:id="@+id/clan_num_members_value"
        android:layout_alignTop="@+id/clan_num_members_label"
        android:layout_toRightOf="@+id/clan_num_members_label"
        android:layout_toEndOf="@+id/clan_num_members_label"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_rating_label"
        android:id="@+id/clan_rating_label"
        android:layout_below="@+id/clan_num_members_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clan_rating_value"
        android:id="@+id/clan_rating_value"
        android:layout_alignTop="@+id/clan_rating_label"
        android:layout_toRightOf="@+id/clan_rating_label"
        android:layout_toEndOf="@+id/clan_rating_label"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/clan_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/clan_rating_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
</RelativeLayout>
