<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.umkc.dfsy8cmail.smitespec.HomeActivity">

    <TextView android:text="@string/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/player_name_value" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:src="@drawable/conquest"
        android:layout_marginTop="59dp"
        android:id="@+id/button_conquest"
        android:layout_below="@+id/player_name_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:src="@drawable/joust"
        android:id="@+id/button_joust"
        android:layout_alignTop="@+id/button_conquest"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:padding="0dp"
        android:src="@drawable/assault"
        android:id="@+id/button_assault"
        android:layout_alignTop="@+id/button_joust"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friends_list"
        android:id="@+id/friends_list"
        android:layout_below="@+id/button_conquest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clan_stats"
        android:id="@+id/button_clan"
        android:layout_alignBaseline="@+id/friends_list"
        android:layout_alignBottom="@+id/friends_list"
        android:layout_toRightOf="@+id/button_joust"
        android:layout_toEndOf="@+id/button_joust" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_stats_title"
        android:id="@+id/player_stats_title"
        android:layout_above="@+id/button_joust"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp" />

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/friend_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_clan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
